--- a/etc/demostralet.conf
+++ b/etc/demostralet.conf
@@ -2,7 +2,7 @@
   "stralet" : {
     "id": "demostralet",
     "stralet_class": "xtz.tquant.stra.backtest.DemoStralet",
-    "universe": ["000001.SH", "399001.SZ", "000300.SH"],
+    "universe": ["399006.SZ", "000300.SH"],
     "cycle_interval": 15,
 
     "parameters": {
@@ -11,7 +11,7 @@
   },
 
   "backtest" : {
-    "date_range" : [ 20170101, 0],
+    "date_range" : [ 20170101, 20170324],
     "accounts" : ["glsc"]
   }
 }
