Implement backtesting using tquant api

--- a/etc/backtest.conf
+++ b/etc/backtest.conf
@@ -1,5 +1,6 @@
 {
   "data" : {
-    "data_home" : "hqdata/data"
+    "data_home" : "hqdata/data",
+    "tqc_addr"  : "tcp://127.0.0.1:10001"
   }
 }
