--- a/etc/demostralet.conf
+++ b/etc/demostralet.conf
@@ -2,16 +2,15 @@
   "stralet" : {
     "id": "demostralet",
     "stralet_class": "xtz.tquant.stra.backtest.DemoStralet",
-    "universe": ["399006.SZ", "000300.SH"],
-    "cycle_interval": 15,
 
     "parameters": {
-      "stk_account": "glsc"
+      "stk_account": "glsc",
+      "universe"   : ["000001.SH", "600000.SH"]
     }
   },
 
   "backtest" : {
-    "date_range" : [ 20170101, 20170324],
+    "date_range" : [ 20170802, 20170831],
     "accounts" : ["glsc"]
   }
 }
