tqs: implement realtime container

--- a/etc/demostralet.conf
+++ b/etc/demostralet.conf
@@ -10,7 +10,8 @@
   },
 
   "backtest" : {
+    "data_level" : "tk",
     "date_range" : [ 20170401, 20170831],
-    "accounts" : ["glsc"]
+    "accounts"   : ["glsc"]
   }
 }
