--- a/scala/demo/etc/backtest.conf
+++ b/scala/demo/etc/backtest.conf
@@ -1,5 +1,11 @@
 {
-  "data" : {
-    "tqc_addr"  : "tcp://127.0.0.1:10001"
+  "tqc" : {
+    "addr"  : "ipc://tqc_10001"
+  },
+
+  "backtest" : {
+    "data_level" : "tk",
+    "date_range" : [ 20170401, 20170831],
+    "accounts"   : ["glsc"]
   }
 }
