--- a/c/src/CMakeLists.txt
+++ b/c/src/CMakeLists.txt
@@ -11,10 +11,6 @@ set(SRC
   bt/sim_data.h
   bt/sim_trade.cpp
   bt/sim_trade.h
-  bt/demo.cpp
-  bt/demo_rbreaker.cpp
-  bt/demo_doublema.cpp
-  bt/demo_ifhft.cpp
   algo/algo_pm.cpp
   algo/algo_pm.h
   algo/algo_twap.cpp
@@ -25,9 +21,18 @@ set(SRC
 
 include_directories(.)
 
-#add_library(tqslib STATIC ${SRC})
-add_executable(tqs_demo ${SRC})
+add_library(tqs-static STATIC ${SRC})
 
-target_link_libraries(tqs_demo tqapi-static)
+add_executable(tqs_demo 
+  bt/demo.cpp
+  bt/demo_rbreaker.cpp
+  bt/demo_doublema.cpp
+  bt/demo_ifhft.cpp
+)
+
+target_link_libraries(tqs_demo
+  tqapi-static
+  tqs-static
+)
 
 install(TARGETS tqs_demo RUNTIME DESTINATION bin)
